@@ -45,8 +45,9 @@
         <string id="32081">Eject inserted medium if job successfull</string>  
         <string id="32082">Use ISO-Files instead of device</string>  
         <string id="32083">Allways use default directorys to store</string>  
-        <string id="32084">Disable transcoding copy protected dvd's from main-menu</string>       
-
+        <string id="32084">Disable transcoding copy protected dvd's from main-menu</string> 
+        <string id="32085">Disable checking for expired makemkv licence</string>       
+      
         <!--              --> 
         <!-- Window-Names -->
         <!--              --> 
