@@ -45,7 +45,9 @@
         <string id="32081">Medium auswerfen sofern Job erfolgreich war</string>         
         <string id="32082">ISO-Datei benutzen anstelle eines Device</string>
         <string id="32083">Immer Standard-Verzeichnisse zum speichern benutzen</string>
-        <string id="32084">Transcodierung von Kopiergeschützten DVD'S aus dem Hauptmenü verhindern</string>       
+        <string id="32084">Transcodierung von Kopiergeschützten DVD'S aus dem Hauptmenü verhindern</string> 
+        <string id="32085">Verhindere Prüfung der abgelaufenen makemkv Lizenz</string>         
+        
         <!--              --> 
         <!-- Window-Names -->
         <!--              --> 
