@@ -235,7 +235,7 @@ echo All directorys inside the addon-directorys itself are
 echo created as well.
 echo If you answer "no" you have to create all directorys
 echo by yourself and the shell-scripts may not working.
-echo You should realy let this script create them.
+echo You should let this script create them.
 echo
 echo -n "Should this setup script create all needed directorys ? (y/n)"
 read ans
@@ -378,7 +378,7 @@ fi
 
 apt-get install mencoder
 apt-get install netcat original-awk dvdauthor mkisofs gddrescue
-apt-get install dvd+rw-tools lsdvd vobcopy
+apt-get install dvd+rw-tools lsdvd 
 apt-get install submux-dvd subtitleripper transcode mjpegtools libdvdcss2 openssh-server openssh-client
 apt-get install liba52-0.7.4 libfaac0 libmp3lame0 libmp4v2-0 libogg0 libsamplerate0 libx264-85 libxvidcore4
 apt-get install libbz2-1.0 libgcc1 libstdc++6 zlib1g
@@ -936,6 +936,8 @@ echo - Please remember that no "spaces" inside the directory-names
 echo   are allowed.
 echo - Please be sure that the user has full write permissions to all
 echo   folders !
+echo - A description of all addon-settings can be found within APPENDIX A
+echo   of the README.Linux 
 echo
 echo Have fun with this addon and I wish you happy ripping.
 echo Feel free to send me a few notes about your expirience with
